updated SA 2.41-80, mainly to fix issues with footnotes, a few translation changes.

--- a/01_agama/samyukta/02/SA2_41-48.md
+++ b/01_agama/samyukta/02/SA2_41-48.md
@@ -14,31 +14,31 @@ next: SA2_49-56.html
   <th class='ch'>（一九八） 羅睺羅</th>
   <th class='en'>41-48 (198). Rāhula (1-8)</th>
   <tr>
-    <td class="ch" title='t99.2.50c7'>如是我聞：一時，佛住王舍城、耆闍崛山。</td>
+    <td class='ch' title='t99.2.50c7'>如是我聞：一時，佛住王舍城、耆闍崛山。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c8'>爾時，尊者羅睺羅往詣佛所。 稽首佛足，退住一面，白佛言： 「世尊，云何知、云何見我內識身及外一切相，令我、我所、我慢使繫著不生？」</td>
+    <td class='ch' title='t99.2.50c8'>爾時，尊者羅睺羅往詣佛所。 稽首佛足，退住一面，白佛言： 「世尊，云何知、云何見我內識身及外一切相，令我、我所、我慢使繫著不生？」</td>
     <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side, and said, “Bhagavān, how do I know and how do I see [41] my body of inner awareness<sup id="ref2"><a href="#n2">2</a></sup> … [42] the outer senses of forms, sounds, odors, flavors, touches, and ideas … [43] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [44] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [45] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [46] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [47] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [48] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs such that binding attachments to self, what belongs to self, and the tendency of self-conceit won’t arise?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c11'>爾時，世尊告羅睺羅： 「善哉，羅睺羅，能問如來甚深之義！」</td>
+    <td class='ch' title='t99.2.50c11'>爾時，世尊告羅睺羅： 「善哉，羅睺羅，能問如來甚深之義！」</td>
     <td id='p3'>3. The Bhagavān then told Rāhula, “It’s good, Rāhula, that you can ask the Tathāgata about such a profound subject!”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c12'>佛告羅睺羅： 「眼若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非異我、不相在如實知。 耳、鼻、舌、身、意亦復如是。</td>
+    <td class='ch' title='t99.2.50c12'>佛告羅睺羅： 「眼若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非異我、不相在如實知。 耳、鼻、舌、身、意亦復如是。</td>
     <td id='p4'>4. The Buddha told Rāhula, “Whether it’s past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, the eye  … form … visual awareness … visual contact … feelings that arise from visual contact … notions that arise from visual contact … intentions that arise from visual contact … or cravings that arise from visual contact, it’s all not self, not different than self, and the two aren’t present in each other when truly known. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c15'>「羅睺羅，作如是知、如是見： 『我此識身及外一切相，令我、我所、我慢使繫著不生。』 羅睺羅，如是我、我所、我慢使繫著不生者。 羅睺羅，是名斷愛濁，見正無間等究竟苦邊。」</td>
+    <td class='ch' title='t99.2.50c15'>「羅睺羅，作如是知、如是見： 『我此識身及外一切相，令我、我所、我慢使繫著不生。』 羅睺羅，如是我、我所、我慢使繫著不生者。 羅睺羅，是名斷愛濁，見正無間等究竟苦邊。」</td>
     <td id='p5'>5. “Rāhula, you should thus know and see: ‘My body of inner awareness <em>and so on as above</em> and all external signs will not cause the arising of binding attachments to self, what belongs to self, and the tendency of self-conceit.’ Rāhula, one prevents the arising of binding attachments to self, what belongs to self, and the tendency of self-conceit in this way. Rāhula, this is called ending the defilement of craving and seeing right then the final end of suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c19'>佛說此經已，尊者羅睺羅聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.50c19'>佛說此經已，尊者羅睺羅聞佛所說歡喜，奉行。</td>
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c21'>（如「內入處」，如是「外入處，色、聲、香、味、觸、法」，「眼識，耳、鼻、舌、身、意識」，「眼觸，耳、鼻、舌、身、意觸」，「眼觸生受，耳、鼻、舌、身、意觸生受」，「眼觸生想，耳、鼻、舌、身、意觸生想」，「眼觸生思，耳、鼻、舌、身、意觸生思」，「眼觸生愛，耳、鼻、舌、身、意觸生愛」亦如上說。）</td>
+    <td class='ch' title='t99.2.50c21'>（如「內入處」，如是「外入處，色、聲、香、味、觸、法」，「眼識，耳、鼻、舌、身、意識」，「眼觸，耳、鼻、舌、身、意觸」，「眼觸生受，耳、鼻、舌、身、意觸生受」，「眼觸生想，耳、鼻、舌、身、意觸生想」，「眼觸生思，耳、鼻、舌、身、意觸生思」，「眼觸生愛，耳、鼻、舌、身、意觸生愛」亦如上說。）</td>
     <td><em>Like the inner senses, thus “the outer senses of forms, sounds, odors, flavors, touches, and ideas;” “visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness;” “visual contact … auditory … olfactory … gustatory … somatic … and mental contact;” “feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact;” “notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact;” “intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact;” and “cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact” were also taught as above.</em></td>
   </tr>
 </table>
@@ -48,8 +48,8 @@ next: SA2_49-56.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 198 in the <cite>Taisho</cite> edition and nos. 219-26 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050c07" target="_blank">T99.2.50c7-26</a>). This group of <em>sūtra</em>s appear to be variations of <a href="https://suttacentral.net/sn18.21" target="_blank">SN 18.21-22</a>. They are also parallel to <a href="https://suttacentral.net/sn22.91" target="_blank">SN 22.91-92</a> and <a href="../01/SA1_29.html" target="_blank">SĀ 1.29</a> (which apply the same template to the five aggregates). [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>body of inner awareness.</em> C. 內識身. At face value, this expression would presumably mean the six kinds of awareness (visual to mental), but this would duplicate the third variant of this series of <em>sūtra</em>s (i.e., SĀ 2.43). The variant comment after this <em>sūtra</em> indicates that SĀ 2.41’s subject is actually the inner senses, and the next <em>sūtra</em> (SĀ 2.42) takes up the outer senses. If the expression 內識身 wasn’t paralleled in Pali, I would consider it a possible corruption of 內入處, but Rāhula’s question in both SN 18.21-22 reads P. <em>saviññāṇake kāye</em>. We should also note that the parallel passage in SĀ 1.29 reads “this body of awareness” (此識身) rather than “inner body of awareness” (內識身), suggesting that 內 may be the typo here. Given the non-standard nature of the expressions involved, I’ve left the C. stand as it is in my translation without amending it. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 198 in the <cite>Taisho</cite> edition and nos. 219-26 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050c07" target="_blank">T99.2.50c7-26</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0221a14" target="_blank">Y30.221a14-2a11</a>). This group of <em>sūtra</em>s appear to be variations of <a href="https://suttacentral.net/sn18.21" target="_blank">SN 18.21-22</a>. They are also parallel to <a href="https://suttacentral.net/sn22.91" target="_blank">SN 22.91-92</a> and <a href="../01/SA1_29.html" target="_blank">SĀ 1.29</a> (which apply the same template to the five aggregates). [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>body of inner awareness.</em> C. <span class="ch">內識身</span>. At face value, this expression would presumably mean the six kinds of awareness (visual to mental), but this would duplicate the third variant of this series of <em>sūtra</em>s (i.e., SĀ 2.43). The variant comment after this <em>sūtra</em> indicates that SĀ 2.41’s subject is actually the inner senses, and the next <em>sūtra</em> (SĀ 2.42) takes up the outer senses. If the expression <span class="ch">內識身</span> wasn’t paralleled in Pali, I would consider it a possible corruption of <span class="ch">內入處</span>, but Rāhula’s question in both SN 18.21-22 reads P. <em>saviññāṇake kāye</em>. We should also note that the parallel passage in SĀ 1.29 reads “this body of awareness” (<span class="ch">此識身</span>) rather than “inner body of awareness” (<span class="ch">內識身</span>), suggesting that <span class="ch">內</span> may be the typo here. Given the non-standard nature of the expressions involved, I’ve left the C. stand as it is in my translation without amending it. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
