--- a/01_agama/samyukta/02/SA2_49-56.md
+++ b/01_agama/samyukta/02/SA2_49-56.md
@@ -14,31 +14,31 @@ next: SA2_57.html
   <th class='ch'>（一九九） 羅睺羅</th>
   <th class='en'>49-56 (199). Rāhula (9-16)</th>
   <tr>
-    <td class="ch" title='t99.2.50c27'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
+    <td class='ch' title='t99.2.50c27'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.50c28'>爾時，世尊告羅睺羅： 「云何知、云何見於此識身及外一切相無有我、我所、我慢使繫著？」</td>
+    <td class='ch' title='t99.2.50c28'>爾時，世尊告羅睺羅： 「云何知、云何見於此識身及外一切相無有我、我所、我慢使繫著？」</td>
     <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How do you know and see [49] this body of awareness … [50] the outer sense fields of forms, sounds, odors, flavors, touches, and ideas … [51] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [52] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [53] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [54] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [55] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [56] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs without having any binding attachments to self, what belongs to self, and the tendency of self-conceit?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51a1'>羅睺羅白佛言： 「世尊是法根、法眼、法依。 善哉，世尊，當為諸比丘廣說此義！ 諸比丘聞已，當受奉行。」</td>
+    <td class='ch' title='t99.2.51a1'>羅睺羅白佛言： 「世尊是法根、法眼、法依。 善哉，世尊，當為諸比丘廣說此義！ 諸比丘聞已，當受奉行。」</td>
     <td id='p3'>3. Rāhula said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma basis. It would be good, Bhagavān, if you would give a detailed discourse on this subject for the monks! After they hear it, the monks will accept and approve of it.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51a3'>佛告羅睺羅： 「善哉！諦聽，當為汝說。 諸所有眼，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非異我、不相在如實正觀。 羅睺羅，耳、鼻、舌、身、意亦復如是。</td>
+    <td class='ch' title='t99.2.51a3'>佛告羅睺羅： 「善哉！諦聽，當為汝說。 諸所有眼，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非異我、不相在如實正觀。 羅睺羅，耳、鼻、舌、身、意亦復如是。</td>
     <td id='p4'>4. The Buddha told Rāhula, “Good! Listen closely; I will explain it for you. Whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, whatever eyes that exist <em>and so on</em> are all not self, not different than self, and neither are present in the other when truly and correctly observed. Rāhula, <em>the ear, nose, tongue, body, and mind and so on are likewise</em>.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51a7'>「羅睺羅，如是知、如是見我此識身及外一切相，我、我所、我慢使繫著不生。 羅睺羅，如是比丘越於二。 離諸相，寂滅解脫。 羅睺羅，如是比丘斷諸愛欲，轉去諸結，究竟苦邊。」</td>
+    <td class='ch' title='t99.2.51a7'>「羅睺羅，如是知、如是見我此識身及外一切相，我、我所、我慢使繫著不生。 羅睺羅，如是比丘越於二。 離諸相，寂滅解脫。 羅睺羅，如是比丘斷諸愛欲，轉去諸結，究竟苦邊。」</td>
     <td id='p5'>5. “Rāhula, when you know and see this conscious body <em>and so on</em> and all external signs in this way, binding attachments to self, what belongs to self, and the tendency of self-conceit won’t arise. Rāhula, such a monk goes beyond both [of these internal and external signs]. Being free of these signs, he is tranquil and liberated. Rāhula, such a monk eliminates the craving of desires, turns away from the bonds, and reaches the final end of suffering.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51a11'>佛說此經已，羅睺羅聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.51a11'>佛說此經已，羅睺羅聞佛所說歡喜，奉行。</td>
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51a13'>（如內入，如是外入⋯乃至⋯意觸因緣生受，亦如是廣說。）</td>
+    <td class='ch' title='t99.2.51a13'>（如內入，如是外入⋯乃至⋯意觸因緣生受，亦如是廣說。）</td>
     <td><em>As with the inner senses, the outer senses … up to … cravings that arise from mental contact<sup id="ref2"><a href="#n2">2</a></sup> are also thus explained in full.</em></td>
   </tr>
 </table>
@@ -48,8 +48,8 @@ next: SA2_57.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 199 in the <cite>Taisho</cite> edition and nos. 227-34 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050c27" target="_blank">T99.2.50c7-1a14</a>). This group of <em>sūtra</em>s is directly parallel with <a href="https://suttacentral.net/sn18.22" target="_blank">SN 18.22</a>. The same template also occurs in <a href="https://suttacentral.net/sn22.92" target="_blank">SN 22.92</a> and <a href="../01/SA1_30.html" target="_blank">SĀ 1.30</a>, where it’s applied to the aggregates rather than the senses. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>cravings that arise from mental contact</em>. The <cite>Taisho</cite> reads “feelings” (受) instead of “cravings” (愛) here. The abbreviation would logically refer to the list of items that served as keywords for the previous set of <em>sūtra</em>s (i.e., <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a>), and these two words in Chinese are sometimes confused for each other. I’ve translated the passage assuming that 受 was a typo for 愛. If it wasn’t a typo, then this would only be a set of five <em>sūtra</em>s, omitting notions, intentions, and cravings that arise from sensory contact that are found in the previous set of eight. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 199 in the <cite>Taisho</cite> edition and nos. 227-34 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050c27" target="_blank">T99.2.50c7-1a14</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0222a12" target="_blank">Y30.222a12-3a7</a>). This group of <em>sūtra</em>s is directly parallel with <a href="https://suttacentral.net/sn18.22" target="_blank">SN 18.22</a>. The same template also occurs in <a href="https://suttacentral.net/sn22.92" target="_blank">SN 22.92</a> and <a href="../01/SA1_30.html" target="_blank">SĀ 1.30</a>, where it’s applied to the aggregates rather than the senses. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>cravings that arise from mental contact</em>. The <cite>Taisho</cite> reads “feelings” (<span class="ch">受</span>) instead of “cravings” (<span class="ch">愛</span>) here. The abbreviation would logically refer to the list of items that served as keywords for the previous set of <em>sūtra</em>s (i.e., <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a>), and these two words in Chinese are sometimes confused for each other. I’ve translated the passage assuming that <span class="ch">受</span> was a typo for <span class="ch">愛</span>. If it wasn’t a typo, then this would only be a set of five <em>sūtra</em>s, omitting notions, intentions, and cravings that arise from sensory contact that are found in the previous set of eight. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
