--- a/01_agama/samyukta/02/SA2_75.md
+++ b/01_agama/samyukta/02/SA2_75.md
@@ -36,8 +36,8 @@ next: SA2_76.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 202 in the Taisho edition and no. 253 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c29" target="_blank">T99.2.51c29-2a9</a>). This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn35.165" target="_blank">SN 35.165-167</a> in that a certain monk asks how to know and see in order to end wrong views. These three Pali <em>sutta</em>s differ only in the wording of his question. Two of them use synonyms for self view, namely P. <em>sakkāyadiṭṭhi</em> and <em>attānudiṭṭhi</em>. In this <em>sūtra</em> a monk asks about ending views about self and producing the view of no self, which agrees with <em>attānudiṭṭhi</em>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>no self</em>. The <cite>Taisho</cite> here reads “impermanent” (無常). In SN 35.165-167, each <em>sutta</em> characterizes the senses as impermanent. Here, the Chinese translation begins with “impermanent” but switches to “being no self” after this first sentence. There appears to be a copyist error here, but which is correct? In the Pali parallels (SN 35.165-7), the reading is “impermanent” rather than “not self”. Yinshun chose to follow the switch to “no self” that follows this sentence and amended 無常 to 無我 here. I’ve followed his reading, but I am not certain at all which is correct, given the reading in Pali. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 202 in the Taisho edition and no. 253 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c29" target="_blank">T99.2.51c29-2a9</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0249a06" target="_blank">Y30.249a6-11</a>). This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn35.165" target="_blank">SN 35.165-167</a> in that a certain monk asks how to know and see in order to end wrong views. These three Pali <em>sutta</em>s differ only in the wording of his question. Two of them use synonyms for self view, namely P. <em>sakkāyadiṭṭhi</em> and <em>attānudiṭṭhi</em>. In this <em>sūtra</em> a monk asks about ending views about self and producing the view of no self, which agrees with <em>attānudiṭṭhi</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>no self</em>. The <cite>Taisho</cite> here reads “impermanent” (<span class="ch">無常</span>). In SN 35.165-167, each <em>sutta</em> characterizes the senses as impermanent. Here, the Chinese translation begins with “impermanent” but switches to “being no self” after this first sentence. There appears to be a copyist error here, but which is correct? In the Pali parallels (SN 35.165-7), the reading is “impermanent” rather than “not self”. Yinshun chose to follow the switch to “no self” that follows this sentence and amended <span class="ch">無常</span> to <span class="ch">無我</span> here. I’ve followed his reading, but I am not certain at all which is correct, given the reading in Pali. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
