--- a/01_agama/samyukta/02/SA2_77.md
+++ b/01_agama/samyukta/02/SA2_77.md
@@ -19,11 +19,11 @@ next: SA2_78.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52a28'>爾時，世尊告尊者阿難： 「於眼當如實知、如實見。 若眼、色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，彼亦如實知、如實見。 耳、鼻、舌、身、意亦復如是。</td>
-    <td id='p2'>2. It was then that the Buddha addressed Venerable Ānanda, “One should truly know and truly see the eye. Whether it’s form,<sup id="ref2"><a href="#n2">2</a></sup> visual awareness, visual contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of visual contact, they should be truly known and truly seen, too. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
+    <td id='p2'>2. It was then that the Buddha addressed Venerable Ānanda, “One should truly know and truly see the eye. Whether it’s form, visual awareness, visual contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of visual contact, they should be truly known and truly seen, too. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52b2'>「彼如實知、如實見已，於眼生厭。 若色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，彼亦生厭。 耳、鼻、舌、身、意亦復如是。 厭已，不樂。 不樂已，解脫。 解脫，知、見： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
-    <td id='p3'>3. “Once it’s truly known and truly seen, one becomes disillusioned with the eye. Whether it’s form, visual awareness, visual contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of visual contact, one becomes disillusioned with them, too. <em>The ear, nose, tongue, body, and mind are likewise</em>. Once someone is disillusioned with it, they don’t enjoy it. Once someone doesn’t enjoy it, they are liberated from it. Being liberated, one knows and sees: ‘My births have ended, the religious life has been established, and the task has been accomplished.’ They know for themselves that they won’t be subject to a later existence.”</td>
+    <td id='p3'>3. “Once it’s truly known and truly seen, one becomes disillusioned with the eye. Whether it’s form, visual awareness, visual contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of visual contact, one becomes disillusioned with them, too. <em>The ear, nose, tongue, body, and mind are likewise</em>. Once someone is disillusioned with it, they don’t enjoy it. Once someone doesn’t enjoy it, they are liberated from it. Being liberated, one knows and sees: ‘My births have ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52b7'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -36,8 +36,7 @@ next: SA2_78.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 204 in the Taisho edition and no. 255 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052a27" target="_blank">T99.2.52a27-b8</a>). [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>whether it’s form …</em>. C. 若眼、色⋯. Yinshun deletes the repetition of “eye” (眼) here, and I’ve following his reading in my translation. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 204 in the Taisho edition and no. 255 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052a27" target="_blank">T99.2.52a27-b8</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0250a15" target="_blank">Y30.250a15-1a6</a>). [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
