--- a/01_agama/samyukta/02/SA2_78.md
+++ b/01_agama/samyukta/02/SA2_78.md
@@ -36,7 +36,7 @@ next: SA2_79.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 205 in the Taisho edition and no. 256 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b09" target="_blank">T99.2.52b9-19</a>). This <em>sūtra</em> is yet another variation of the template that many of the previous <em>sūtra</em>s have developed. It doesn’t appear to have a direct parallel in SN 35, but it shares many common passages in a different arrangement. We should also note the mention at it’s outset of a collection of “all the <em>udāna</em> verses” recited by the Buddha. This would appear to attest to the existence of such a collection in the Sarvāstivāda canon, which presumably would have paralleled the <a href="https://suttacentral.net/pitaka/sutta/minor/kn/ud" target="_blank">one that survives in the Theravāda canon</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 205 in the Taisho edition and no. 256 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b09" target="_blank">T99.2.52b9-19</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0251a07" target="_blank">Y30.251a7-13</a>). This <em>sūtra</em> is yet another variation of the template that many of the previous <em>sūtra</em>s have developed. It doesn’t appear to have a direct parallel in SN 35, but it shares many common passages in a different arrangement. We should also note the mention at it’s outset of a collection of “all the <em>udāna</em> verses” recited by the Buddha. This would appear to attest to the existence of such a collection in the Sarvāstivāda canon, which presumably would have paralleled the <a href="https://suttacentral.net/pitaka/sutta/minor/kn/ud" target="_blank">one that survives in the Theravāda canon</a>. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
