--- a/01_agama/samyukta/02/SA2_79.md
+++ b/01_agama/samyukta/02/SA2_79.md
@@ -15,11 +15,11 @@ next: SA2_80.html
   <th class='en'>79 (206). Truly Knowing</th>
   <tr>
     <td class='ch' title='t99.2.52b20'>如是我聞： 一時，佛住毘舍離城、耆婆拘摩羅藥師菴羅園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying in Doctor Jīvaka Kumāra’s Mango Park of Vaiśālī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying in Doctor Jīvaka Kumāra’s Mango Park of Vaiśālī.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52b21'>爾時，世尊告諸比丘： 「當勤方便禪思，內寂其心。 所以者何？ 比丘，方便禪思，內寂其心，如是如實知顯現。 於何如實知顯現？ 於眼如實知顯現。若色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，彼亦如實知顯現。耳、鼻、舌、身、意亦復如是。此諸法無常、有為，亦如是如實知顯現。」</td>
-    <td id='p2'>2. It was then that the Buddha addressed the monks, “One should be diligent in the methods of meditation and inner peace of mind. Why is that? Monks, with the methods of meditation and inner peace of mind, one thus truly knows what appears to them.<sup id="ref2"><a href="#n2">2</a></sup> What does one truly know is appearing? One truly knows appearances of the eye. Whether it’s form, visual awareness, visual contact, or painful, pleasant, or neither painful nor pleasant feelings that arise as a result of visual contact, one truly knows those appearances, too. <em>The ear, nose, tongue, body, and mind are likewise.</em> One also truly knows these appearances to be things that are impermanent and created.”</td>
+    <td id='p2'>2. It was then that the Buddha addressed the monks, “One should be diligent in the methods of meditation and inner peace of mind. Why is that? Monks, with the methods of meditation and inner peace of mind, one thus truly knows what appears to them.<sup id="ref3"><a href="#n3">3</a></sup> What does one truly know is appearing? One truly knows appearances of the eye. Whether it’s form, visual awareness, visual contact, or painful, pleasant, or neither painful nor pleasant feelings that arise as a result of visual contact, one truly knows those appearances, too. <em>The ear, nose, tongue, body, and mind are likewise.</em> One also truly knows these appearances to be things that are impermanent and created.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52b27'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -32,11 +32,12 @@ next: SA2_80.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 206 in the <cite>Taisho</cite> edition and no. 257 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b20" target="_blank">T99.2.52b20-8</a>). It and the next <em>sūtra</em> are parallels of <a href="https://suttacentral.net/sn35.160" target="_blank">SN 35.160-161</a>. This <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn35.161" target="_blank">SN 35.161</a>. [<a href="#ref1">back</a>]</li>
-<li id="n2"><p>This passage is essentially the same as the one we find in SN 35.161, but it has been developed further. The equivalent passage in Pali begins simply as: “Mendicants, meditate in retreat. For a mendicant who meditates in retreat, things become truly clear” (<em>… paṭisallāne, bhikkhave, yogamāpajjatha. Paṭisallīnassa, bhikkhave, bhikkhuno yathābhūtaṁ okkhāyati.</em>).</p>
-<p>The C. passage has added phrases like “diligent in the methods” (勤方便, where 方便 probably translates an equivalent to P. <em>padhāna</em>, “make effort”). It also uses a general verb for meditation (禪思), while the phrase “inner peace of one’s mind” (內寂其心) adds a context more specific to the Buddhist practice of <em>dhyāna</em>. It seems plausible that 禪思 would translate a verb or past participle like S. <em>dhyāyati</em> (“to reflect, meditate, muse, contemplate”), but note that in SN 35.161, the parallel is P. <em>yogamāpajjatha</em>.</p>
-<p>The C. also translates an equiv. of P. <em>okkhāyati</em> as 顯現 (“to manifest, make plain, appear”) but adds a verb to <em>yathābhūta</em> so that the expression becomes “truly know what appears” (如實知顯現). This doesn’t happen in SĀ 1.80, however, making is possible that the addition of 知 may be in error.</p>
-<p>Overall, this is a good example of how we can see textual development of concise passages into more explicit and verbose expressions when comparing parallels. In this case, the Pali version is the simpler one. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 206 in the <cite>Taisho</cite> edition and no. 257 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b20" target="_blank">T99.2.52b20-8</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0251a14" target="_blank">Y30.251a14-2a4</a>). It and the next <em>sūtra</em> are parallels of <a href="https://suttacentral.net/sn35.160" target="_blank">SN 35.160-161</a>. This <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn35.161" target="_blank">SN 35.161</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Doctor Jīvaka Kumāra’s Mango Park</em>. C. <span class="ch">耆婆拘摩羅藥師、菴羅園</span> (EMC. ʒɪi-bua kɪu-mua-la + “doctor” + •əm-la + “park” = G. <em>jiva kumara *bheṣajaguru amravana</em>), P. <em>jīvakambavana</em>. Theravāda sources place this grove near Rājagṛha rather than Vaiśālī. Here, Jīvaka’s full name and profession are given. Pali sources give his full name as P. <em>jīvaka komārabhacca</em>, and the <cite>Divyāvadāna</cite> calls him S. <em>jīvaka kumārabhūta</em>. Here, his title is simply G. <em>kumara</em> (“youth” or “prince”). See <a href="https://www.palikanon.com/english/pali_names/j/jiivaka.htm" target="_blank">his entry</a> in the <cite>Dictionary of Pali Proper Names</cite> for more about this layman in Theravāda sources. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>This passage is essentially the same as the one we find in SN 35.161, but it has been developed further. The equivalent passage in Pali begins simply as: “Mendicants, meditate in retreat. For a mendicant who meditates in retreat, things become truly clear” (<em>… paṭisallāne, bhikkhave, yogamāpajjatha. Paṭisallīnassa, bhikkhave, bhikkhuno yathābhūtaṁ okkhāyati.</em>).</p>
+<p>The C. passage has added phrases like “diligent in the methods” (<span class="ch">勤方便</span>, where <span class="ch">方便</span> probably translates an equivalent to P. <em>padhāna</em>, “make effort”). It also uses a general verb for meditation (<span class="ch">禪思</span>), while the phrase “inner peace of one’s mind” (<span class="ch">內寂其心</span>) adds a context more specific to the Buddhist practice of <em>dhyāna</em>. It seems plausible that <span class="ch">禪思</span> would translate a verb or past participle like S. <em>dhyāyati</em> (“to reflect, meditate, muse, contemplate”), but note that in SN 35.161, the parallel is P. <em>yogamāpajjatha</em>.</p>
+<p>The C. also translates an equiv. of P. <em>okkhāyati</em> as <span class="ch">顯現</span> (“to manifest, make plain, appear”) but adds a verb to <em>yathābhūta</em> so that the expression becomes “truly know what appears” (<span class="ch">如實知顯現</span>). This doesn’t happen in SĀ 1.80, however, making is possible that the addition of 知 may be in error.</p>
+<p>Overall, this is a good example of how we can see textual development of concise passages into more explicit and verbose expressions when comparing parallels. In this case, the Pali version is the simpler one. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
