--- a/01_agama/samyukta/02/SA2_80.md
+++ b/01_agama/samyukta/02/SA2_80.md
@@ -19,7 +19,7 @@ next: SA2_81-92.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c1'>爾時，世尊告諸比丘：「當修無量三摩提，精勤繫念。所以者何？修無量三摩提，精勤繫念已，則如實顯現。於何如實顯現？於眼如實顯現」⋯如是廣說乃至⋯「此諸法無常、有為，此如實顯現。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You should cultivate a measureless <em>samādhi</em> and earnestly tie your thoughts to it. Why is that? Having cultivated a measureless <em>samādhi</em> and earnestly tied one’s thoughts to it, then things appear as they really are. What truly appears? The eye truly appears … <em>and so on as in <a href="SA2_79.html#p2" target="_blank">previous sūtra</a></em> … These things truly appear as impermanent and created.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You should cultivate a measureless <em>samādhi</em> and earnestly tie your thoughts to it. Why is that? Having cultivated a measureless <em>samādhi</em> and earnestly tied one’s thoughts to it, then things appear as they really are. What is it that appears as it really is? The eye appears as it really is … <em>and so on as in the <a href="SA2_79.html#p2" target="_blank">previous sūtra</a></em> … These things truly appear impermanent and created.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c5'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -32,11 +32,11 @@ next: SA2_81-92.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 207 in the <cite>Taisho</cite> edition and no. 258 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b29" target="_blank">T99.2.52b29-c6</a>). This and the previous <em>sūtra</em> are similar to <a href="https://suttacentral.net/sn35.160" target="_blank">SN 35.160-161</a>. See the notes to <a href="SA2_79.html" target="_blank">SĀ 2.79</a> for more about these <em>sūtra</em>s. The difference here is that the practice recommended is tying one’s thoughts to a “measureless <em>samādhi</em>.” The equivalent passage in Pali reads more simply: “Mendicants, develop immersion. For a mendicant with immersion, things become truly clear” (<em>Samādhiṁ, bhikkhave, bhāvetha. Samāhitassa, bhikkhave, bhikkhuno yathābhūtaṁ okkhāyati.</em>). [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 207 in the <cite>Taisho</cite> edition and no. 258 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052b29" target="_blank">T99.2.52b29-c6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0252a05" target="_blank">Y30.252a5-9</a>). This and the previous <em>sūtra</em> are similar to <a href="https://suttacentral.net/sn35.160" target="_blank">SN 35.160-161</a>. See the notes to <a href="SA2_79.html" target="_blank">SĀ 2.79</a> for more about these <em>sūtra</em>s. This <em>sūtra</em> differs from SĀ 2.79 by recommending the practice of tying one’s thoughts to a “measureless <em>samādhi</em>.” The equivalent passage in Pali reads more simply: “Mendicants, develop immersion. For a mendicant with immersion, things become truly clear” (<em>Samādhiṁ, bhikkhave, bhāvetha. Samāhitassa, bhikkhave, bhikkhuno yathābhūtaṁ okkhāyati.</em>). [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 30 January 2025</p>
+<p class='revised'>Last Revised: 1 February 2025</p>
 
 <hr/>
