--- a/01_agama/samyukta/02/SA2_58-74.md
+++ b/01_agama/samyukta/02/SA2_58-74.md
@@ -14,27 +14,27 @@ next: SA2_75.html
   <th class='ch'>（二〇一） 云何得漏盡</th>
   <th class='en'>58-74 (201). How to End the Contaminants et al.</th>
   <tr>
-    <td class="ch" title='t99.2.51c11'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.51c11'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51c12'>時，有異比丘來詣佛所。 稽首佛足，退住一面，白佛言： 「世尊，云何知、云何見次第疾得漏盡？」</td>
+    <td class='ch' title='t99.2.51c12'>時，有異比丘來詣佛所。 稽首佛足，退住一面，白佛言： 「世尊，云何知、云何見次第疾得漏盡？」</td>
     <td id='p2'>2. At the time, there was a certain monk who came to visit the Buddha. He bowed his head at the Buddha’s feet, withdrew to stand to one side, and said to the Buddha, “Bhagavān, knowing and seeing in what way will [58] bring a successive and swift end to the contaminants … [59] a successive stop to all the bonds … [60] stop all the fetters … [61] stop all the tendencies … [62] stop all the higher afflictions … [63] stop all the bonds<sup id="ref2"><a href="#n2">2</a></sup> … [64] stop the floods … [65] stop the yokes … [66] stop the acquisitions … [67] stop the contacts … [68] stop the hindrances … [69] stop the entanglements … [70] stop the defilements … [71] stop the cravings … [72] stop the mentalities … [73] stop wrong views and produce right view … [74] stop ignorance and produce insight?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51c14'>爾時，世尊告彼比丘： 「當正觀無常。 何等法無常？ 謂眼無常。 若色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，當觀無常。 耳⋯鼻⋯舌⋯身⋯意當觀無常。 若法、意識、意觸、意觸因緣生受，若苦、若樂、不苦不樂，彼亦無常。 比丘，如是知、如是見次第盡有漏。」</td>
+    <td class='ch' title='t99.2.51c14'>爾時，世尊告彼比丘： 「當正觀無常。 何等法無常？ 謂眼無常。 若色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，當觀無常。 耳⋯鼻⋯舌⋯身⋯意當觀無常。 若法、意識、意觸、意觸因緣生受，若苦、若樂、不苦不樂，彼亦無常。 比丘，如是知、如是見次第盡有漏。」</td>
     <td id='p3'>3. The Bhagavān then told that monk, “You should correctly contemplate impermanence. What things are impermanent? The eye is impermanent. Whether it’s form, visual awareness, visual contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of visual contact, you should contemplate them as impermanent. The ear … nose … tongue … body … and mind should be contemplated as impermanent. Whether it’s ideas, mental awareness, mental contact, or painful, pleasant, and neither painful nor pleasant feelings that arise as a result of mental contact, they are impermanent, too. Monk, knowing and seeing in this way will bring a successive end to the contaminants <em>and so on as above</em>.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51c20'>時，彼比丘聞佛所說歡喜，作禮，而去。</td>
+    <td class='ch' title='t99.2.51c20'>時，彼比丘聞佛所說歡喜，作禮，而去。</td>
     <td id='p4'>4. When that monk heard what the Buddha taught, he rejoiced, bowed, and departed.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51c21'>（如是，比丘所說經。 若差別者： 「云何知、云何見，次第盡一切結」⋯ 「斷一切縛」⋯ 「斷一切使」⋯ 「斷一切上煩惱」⋯ 「斷一切結」⋯ 「斷諸流」⋯ 「斷諸軛」⋯ 「斷諸取」⋯ 「斷諸觸」⋯ 「斷諸蓋」⋯ 「斷諸纏」⋯ 「斷諸垢」⋯ 「斷諸愛」⋯ 「斷諸意」⋯ 「斷邪見、生正見」⋯ 「斷無明、生明。 比丘，如是觀眼無常⋯乃至⋯ 如是知、如是見次第無明斷、明生。」）</td>
+    <td class='ch' title='t99.2.51c21'>（如是，比丘所說經。 若差別者： 「云何知、云何見，次第盡一切結」⋯ 「斷一切縛」⋯ 「斷一切使」⋯ 「斷一切上煩惱」⋯ 「斷一切結」⋯ 「斷諸流」⋯ 「斷諸軛」⋯ 「斷諸取」⋯ 「斷諸觸」⋯ 「斷諸蓋」⋯ 「斷諸纏」⋯ 「斷諸垢」⋯ 「斷諸愛」⋯ 「斷諸意」⋯ 「斷邪見、生正見」⋯ 「斷無明、生明。 比丘，如是觀眼無常⋯乃至⋯ 如是知、如是見次第無明斷、明生。」）</td>
     <td><em>Thus, [there are more] </em>sūtra<em>s teaching a certain monk. The differences are: “knowing and seeing in what way will bring a successive end to all the bonds” … “stop all the fetters” … “stop all the tendencies” … “stop all the higher afflictions” … “stop all the bonds” … “stop the floods” … “stop the yokes” … “stop the acquisitions” … “stop the contacts” … “stop the hindrances” … “stop the entanglements” … “stop the defilements” … “stop the cravings” … “stop the mentalities” … “stop wrong views and produce right view” … “stop ignorance and produce insight. Monk, thus observe the eye as impermanent … </em>up to<em> … Knowing and seeing in this way will bring a successive stop to ignorance and produce insight.”</em></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.51c27'>時，彼比丘聞佛所說歡喜。 歡喜已，作禮，而去。</td>
+    <td class='ch' title='t99.2.51c27'>時，彼比丘聞佛所說歡喜。 歡喜已，作禮，而去。</td>
     <td id='p5'>5. After the Buddha spoke this <em>sūtra</em>, that monk who heard what the Buddha taught rejoiced. Having rejoiced, he bowed and departed.</td>
   </tr>
 </table>
@@ -44,8 +44,8 @@ next: SA2_75.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 201 in the <cite>Taisho</cite> edition and nos. 236-52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c11" target="_blank">T99.2.51c11-28</a>). This group of <em>sūtra</em>s are like <a href="https://suttacentral.net/sn35.53" target="_blank">SN 35.53-59</a>, but there are many more keywords used to create unique <em>sūtra</em>s here. The direct correspondence with the Pali <em>sutta</em>s is as follows: SĀ 2.74 ≈ SN 35.53, 60 ≈ 54, 58 ≈ 56, 61 ≈ 58.<br/>The other versions share a very similar template but aren’t directly equivalent to each other. It should also be noted that all of these <em>sūtra</em>s teach a contemplation of impermanence, whereas <a href="https://suttacentral.net/sn35.55" target="_blank">SN 35.55-59</a> switch to contemplation of things not being self, which created yet another set of variants. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>all the bonds.</em> This item appears twice in the variants note by the Chinese translator. I can only see perhaps a slight difference in the verbs used (“successive stop to” vs. simply “stop”). Otherwise, it appears to be a duplication.  [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 201 in the <cite>Taisho</cite> edition and nos. 236-52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c11" target="_blank">T99.2.51c11-28</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0228a07" target="_blank">Y30.228a7-9a2</a>). This group of <em>sūtra</em>s are like <a href="https://suttacentral.net/sn35.53" target="_blank">SN 35.53-59</a>, but there are many more keywords used to create unique <em>sūtra</em>s here. The direct correspondence with the Pali <em>sutta</em>s is as follows: SĀ 2.74 ≈ SN 35.53, 60 ≈ 54, 58 ≈ 56, 61 ≈ 58.<br/>The other versions share a very similar template but aren’t directly equivalent to each other. It should also be noted that all of these <em>sūtra</em>s teach a contemplation of impermanence, whereas <a href="https://suttacentral.net/sn35.55" target="_blank">SN 35.55-59</a> switch to contemplation of things not being self, which created yet another set of variants. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>all the bonds.</em> This item appears twice in the variants note by the Chinese translator. I can only see perhaps a slight difference in the verbs used (“successive stop to” vs. simply “stop”). Otherwise, it appears to be a duplication. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
