--- a/01_agama/samyukta/02/SA2_76.md
+++ b/01_agama/samyukta/02/SA2_76.md
@@ -15,11 +15,11 @@ next: SA2_77.html
   <th class='en'>76 (203). Knowing and Seeing Ignorance</th>
   <tr>
     <td class='ch' title='t99.2.52a10'>如是我聞： 一時，佛住毘舍離、耆婆拘摩羅藥師菴羅園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying in Doctor Jīvaka Kumāra’s Mango Park of Vaiśālī.<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying in Doctor Jīvaka Kumāra’s Mango Park of Vaiśālī.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52a11'>爾時，世尊告諸比丘： 「若有比丘能斷一法者，則得正智，能自記說： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If there is a monk who can end one thing, then he will attain right knowledge and be able to claim about himself: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself knows that he won’t be subject to a later existence.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If there is a monk who can end one thing, then he will attain right knowledge and be able to claim about himself: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself knows he won’t be subject to a later existence.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52a14'>諸比丘白佛言： 「世尊是法根、法眼、法依。 唯願演說！ 諸比丘聞已，當受奉行。」</td>
@@ -27,7 +27,7 @@ next: SA2_77.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52a15'>佛告諸比丘： 「諦聽，善思！當為汝說。 諸比丘，云何一法斷故⋯乃至⋯不受後有？ 所謂無明。 離欲明生。 得正智，能自記說： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
-    <td id='p3'>3. The Buddha told the monks, “Listen closely, and consider it well! I will explain it for you. Monks, by ending what one thing … <em>up to</em> … they won’t be subject to a later existence? That thing is ignorance. Insight arises when one becomes free of desire. Having attained right knowledge, a monk can claim about himself: ‘My births have ended, the religious life has been established, and the task has been accomplished.’ He himself knows that he won’t be subject to a later existence.”</td>
+    <td id='p3'>3. The Buddha told the monks, “Listen closely, and consider it well! I will explain it for you. Monks, by ending what one thing … <em>up to</em> … they won’t be subject to a later existence? That thing is ignorance. Insight arises when one becomes free of desire. Having attained right knowledge, a monk can claim about himself: ‘My births have ended, the religious practice has been established, and the task has been accomplished.’ He himself knows he won’t be subject to a later existence.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52a19'>時，有異比丘從坐起。 整衣服，偏袒右肩，為佛作禮，右膝著地，合掌。 白佛言： 「世尊，云何知、云何見無明，離欲，明生？」</td>
@@ -48,8 +48,7 @@ next: SA2_77.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 203 in the Taisho edition and no. 254 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052a10" target="_blank">T99.2.52a10-26</a>). The second half of this <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn35.165" target="_blank">SN 35.165</a>. Here, a certain monks asks about knowing and seeing ignorance, while he asks about wrong view in SN 35.165. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>Doctor Jīvaka Kumāra’s Mango Park</em>. C. 耆婆拘摩羅藥師、菴羅園 (EMC. ʒɪi-bua kɪu-mua-la + “doctor” + •əm-la + “park” = G. <em>jiva kumara *bheṣajaguru amravana</em>), P. <em>jīvakambavana</em>. Theravāda sources place this grove near Rājagṛha rather than Vaiśālī. Here, Jīvaka’s full name and profession are given. Pali sources give his full name as P. <em>jīvaka komārabhacca</em>, and the <cite>Divyāvadāna</cite> calls him S. <em>jīvaka kumārabhūta</em>. Here, his title is simply G. <em>kumara</em> (“youth” or “prince”). See <a href="https://www.palikanon.com/english/pali_names/j/jiivaka.htm" target="_blank">his entry</a> in the <cite>Dictionary of Pali Proper Names</cite> for more about this layman in Theravāda sources. [<a href="#ref2">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 203 in the Taisho edition and no. 254 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052a10" target="_blank">T99.2.52a10-26</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0249a12" target="_blank">Y30.249a12-50a6</a>). The second half of this <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn35.165" target="_blank">SN 35.165</a>. Here, a certain monks asks about knowing and seeing ignorance, while he asks about wrong view in SN 35.165. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
